add rbac for developments

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -26,3 +26,21 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - extensions
+  resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - extensions
+  resources:
+  - deployments/status
+  verbs:
+  - get
