move sample yml to correct location

--- a/config/samples/core_v1alpha1_application.yaml
+++ b/config/samples/core_v1alpha1_application.yaml
@@ -1,7 +1,8 @@
 apiVersion: core.kapp.dev/v1alpha1
 kind: Application
 metadata:
-  name: application-sample
+  name: test
 spec:
-  # Add fields here
-  foo: bar
+  components:
+    - name: nginx
+      image: nginx
