Add first plugin

--- a/config/samples/core_v1alpha1_application.yaml
+++ b/config/samples/core_v1alpha1_application.yaml
@@ -6,3 +6,7 @@ spec:
   components:
     - name: nginx
       image: nginx:alpine
+      plugins:
+        - name: manual-scaler
+          replicas: 3
+
