--- a/config/crd/bases/core.kapp.dev_applications.yaml
+++ b/config/crd/bases/core.kapp.dev_applications.yaml
@@ -39,7 +39,7 @@ spec:
                 properties:
                   command:
                     type: string
-                  envs:
+                  env:
                     items:
                       description: EnvVar represents an environment variable present
                         in a Container.
