--- a/config/crd/bases/core.kapp.dev_applications.yaml
+++ b/config/crd/bases/core.kapp.dev_applications.yaml
@@ -62,11 +62,17 @@ spec:
                       description: EnvVar represents an environment variable present
                         in a Container.
                       properties:
+                        componentPort:
+                          type: string
                         name:
                           description: Name of the environment variable. Must be a
                             C_IDENTIFIER.
                           type: string
+                        prefix:
+                          type: string
                         sharedEnv:
+                          type: string
+                        suffix:
                           type: string
                         value:
                           type: string
@@ -372,10 +378,16 @@ spec:
                 description: EnvVar represents an environment variable present in
                   a Container.
                 properties:
+                  componentPort:
+                    type: string
                   name:
                     description: Name of the environment variable. Must be a C_IDENTIFIER.
                     type: string
+                  prefix:
+                    type: string
                   sharedEnv:
+                    type: string
+                  suffix:
                     type: string
                   value:
                     type: string
