Add CPU Memory Supports

--- a/config/crd/bases/core.kapp.dev_applications.yaml
+++ b/config/crd/bases/core.kapp.dev_applications.yaml
@@ -345,23 +345,30 @@ spec:
                         type: integer
                     type: object
                   resources:
-                    description: ResourceRequirements describes the compute resource
-                      requirements.
                     properties:
-                      limits:
-                        additionalProperties:
-                          type: string
-                        description: 'Limits describes the maximum amount of compute
-                          resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                      cpu:
+                        properties:
+                          max:
+                            type: string
+                          min:
+                            type: string
+                        required:
+                        - max
+                        - min
                         type: object
-                      requests:
-                        additionalProperties:
-                          type: string
-                        description: 'Requests describes the minimum amount of compute
-                          resources required. If Requests is omitted for a container,
-                          it defaults to Limits if that is explicitly specified, otherwise
-                          to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                      memory:
+                        properties:
+                          max:
+                            type: string
+                          min:
+                            type: string
+                        required:
+                        - max
+                        - min
                         type: object
+                    required:
+                    - cpu
+                    - memory
                     type: object
                   type:
                     enum:
