--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
+    "@types/redux-form": "^8.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "redux-form": "^8.2.6",
     "typescript": "^3.7.4"
   },
   "scripts": {
