--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-form": "^8.2.0",
+    "connected-react-router": "^6.6.1",
+    "immutable": "^4.0.0-rc.12",
+    "material-table": "^1.56.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux-form": "^8.2.6",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.7.4"
   },
   "scripts": {
