--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "react-app",
   "rules": {
-    "@typescript-eslint/no-unused-vars": "warn" // TODO set warn
+    "@typescript-eslint/no-unused-vars": "error" // TODO set warn
   }
 }
