--- a/config/kong/kong-dbless.yaml
+++ b/config/kong/kong-dbless.yaml
@@ -46,18 +46,14 @@ metadata:
   namespace: kapp-kong
 spec:
   components:
-    - name: kong-dbless
+    - name: proxy
       image: kong:1.4
-      beforeStart:
-        - ls -alh /
-        - ls -alh /kong
-        - ls -alh /tmp
       beforeDestroy:
         - /bin/sh
         - -c
         - kong quit
       volumeMounts:
-        - mountPath: /kong/servers.conf
+        - mountPath: /kong/
           name: servers-conf
       resources:
         cpu:
@@ -66,6 +62,19 @@ spec:
         memory:
           min: 500M
           max: 2G
+      ports:
+        - containerPort: 8000
+          name: proxy
+          protocol: TCP
+          servicePort: 80
+        - containerPort: 8443
+          name: proxy-ssl
+          protocol: TCP
+          servicePort: 443
+        - containerPort: 9542
+          name: metrics
+          protocol: TCP
+          servicePort: 9542
       env:
         - name: KONG_DATABASE
           value: 'off'
@@ -81,6 +90,71 @@ spec:
           value: 127.0.0.1:8444 ssl
         - name: KONG_PROXY_LISTEN
           value: 0.0.0.0:8000, 0.0.0.0:8443 ssl http2
+      livenessProbe:
+        failureThreshold: 3
+        httpGet:
+          path: /health
+          port: 9001
+          scheme: HTTP
+        initialDelaySeconds: 5
+        periodSeconds: 10
+        successThreshold: 1
+        timeoutSeconds: 1
+      readinessProbe:
+        failureThreshold: 3
+        httpGet:
+          path: /health
+          port: 9001
+          scheme: HTTP
+        initialDelaySeconds: 5
+        periodSeconds: 10
+        successThreshold: 1
+        timeoutSeconds: 1
+      securityContext:
+        runAsUser: 1000
+    - name: ingress-controller
+      image: kong-docker-kubernetes-ingress-controller.bintray.io/kong-ingress-controller:0.7.0
+      args:
+        - /kong-ingress-controller
+        - --kong-url=https://localhost:8444
+        - --admin-tls-skip-verify
+        - --publish-service=kong/kong-proxy
+      env:
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: metadata.name
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: metadata.namespace
+      ports:
+        - containerPort: 8080
+          name: webhook
+          protocol: TCP
+          servicePort: 8080
+      livenessProbe:
+        failureThreshold: 3
+        httpGet:
+          path: /healthz
+          port: 10254
+          scheme: HTTP
+        initialDelaySeconds: 5
+        periodSeconds: 10
+        successThreshold: 1
+        timeoutSeconds: 1
+      readinessProbe:
+        failureThreshold: 3
+        httpGet:
+          path: /healthz
+          port: 10254
+          scheme: HTTP
+        initialDelaySeconds: 5
+        periodSeconds: 10
+        successThreshold: 1
+        timeoutSeconds: 1
   volumes:
     - name: servers-conf
       configMap:
