Revert "Squashed commit of the following:"
This reverts commit a4ac89eedcd4dfa3e848a81981ae43d5b522b0b5.

--- a/config/samples/core_v1alpha1_application.yaml
+++ b/config/samples/core_v1alpha1_application.yaml
@@ -1,13 +1,4 @@
 apiVersion: core.kapp.dev/v1alpha1
-kind: File
-metadata:
-  name: nginx-config
-data: |
-  location / {
-    proxy_pass http://localhost:3000
-  }
----
-apiVersion: core.kapp.dev/v1alpha1
 kind: Application
 metadata:
   name: test
@@ -20,7 +11,8 @@ spec:
         - echo "test" > /tmp/bbq
         - ls -alh /tmp
       afterStart:
-        - ls -alh /tmp/
+        - echo "afterSatart" > /tmp/log
+        - cat /tmp/log
       beforeDestroy:
         - echo "Bye Bye"
       env:
@@ -42,19 +34,19 @@ spec:
           servicePort: 80
       resources:
         cpu:
-          min: 10m
-          max: 100m
+          min: 200M
+          max: 1000M
         memory:
           min: 500M
           max: 2G
-      #        disk:
-      #          - path: /a/b/c
-      #            name: tmpfile
-      #            size: 1G
-      #            storageClass: ssd
-      volumeMounts:
-        - mountPath: /tmp/
-          name: nginx-config
+#        disk:
+#          - path: /a/b/c
+#            name: tmpfile
+#            size: 1G
+#            storageClass: ssd
+#        volume:
+#          - name: config1
+#            path: /tmp/config.yml
       plugins:
         - name: manual-scaler
           type: plugins.core.kapp.dev/v1alpha1.manual-scaler
@@ -98,7 +90,4 @@ spec:
   sharedEnv:
     - name: SOME_COMMON_ENV
       value: shared_value
-  volumes:
-    - configMap:
-        name: nginx-config
-      name: nginx-config
+
