--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connected-react-router": "^6.6.1",
     "immutable": "^4.0.0-rc.12",
     "material-table": "^1.56.1",
+    "notistack": "^0.9.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
