--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-spring": "^8.0.27",
     "redux-form": "^8.2.6",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
