--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-syntax-highlighter": "^11.0.4",
     "@types/redux-form": "^8.2.0",
     "@types/redux-immutable": "^4.0.1",
     "connected-react-router": "^6.6.1",
@@ -26,6 +27,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-syntax-highlighter": "^12.2.1",
     "redux-form": "^8.2.6",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
