--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/core.kapp.dev_applications.yaml
 - bases/core.kapp.dev_plugins.yaml
 - bases/core.kapp.dev_files.yaml
+- bases/core.kapp.dev_componenttemplates.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -12,12 +13,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_applications.yaml
 #- patches/webhook_in_files.yaml
+#- patches/webhook_in_componenttemplates.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_applications.yaml
 #- patches/cainjection_in_files.yaml
+#- patches/cainjection_in_componenttemplates.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
