--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/redux-form": "^8.2.0",
     "@types/redux-immutable": "^4.0.1",
+    "axios": "^0.19.2",
     "connected-react-router": "^6.6.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "immutable": "^4.0.0-rc.12",
     "material-table": "^1.56.1",
     "notistack": "^0.9.7",
@@ -27,8 +31,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-syntax-highlighter": "^12.2.1",
     "react-spring": "^8.0.27",
+    "react-syntax-highlighter": "^12.2.1",
     "redux-form": "^8.2.6",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
