--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/redux-form": "^8.2.0",
     "@types/redux-immutable": "^4.0.1",
+    "ace-builds": "^1.4.8",
     "axios": "^0.19.2",
     "connected-react-router": "^6.6.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "immutable": "^4.0.0-rc.12",
+    "install": "^0.13.0",
     "material-table": "^1.56.1",
     "notistack": "^0.9.7",
+    "npm": "^6.13.7",
     "react": "^16.12.0",
+    "react-ace": "^8.0.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
