--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/redux-form": "^8.2.0",
     "@types/redux-immutable": "^4.0.1",
     "ace-builds": "^1.4.8",
+    "antd": "^3.26.11",
     "axios": "^0.19.2",
     "connected-react-router": "^6.6.1",
     "cors": "^2.8.5",
