1.clean hard code env using componentPort 2. enable componentPort in sharedEnv

--- a/config/crd/bases/core.kapp.dev_componenttemplates.yaml
+++ b/config/crd/bases/core.kapp.dev_componenttemplates.yaml
@@ -101,6 +101,7 @@ spec:
                     - SCTP
                     type: string
                   servicePort:
+                    description: '? what is service port for?'
                     format: int32
                     type: integer
                 required:
