--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-syntax-highlighter": "^12.2.1",
     "redux-form": "^8.2.6",
     "redux-immutable": "^4.0.0",
+    "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.7.4"
   },
