--- a/config/samples/core_v1alpha1_componenttemplate.yaml
+++ b/config/samples/core_v1alpha1_componenttemplate.yaml
@@ -18,26 +18,21 @@ spec:
     # Get value of another component export port address,
     # It will be helpful is the component depends on another.
     - name: API_URL
-      componentPort: api/http
-      prefix: http://
-      suffix: /v4
+      type: linked
     # Get value from shareEnv
     - name: SOME_COMMON_ENV
-      sharedEnv: SOME_COMMON_ENV
+      type: external
     # normal env definition
     - name: SOME_ENV
+      type: static
       value: SOME_VALUE
   ports:
     - name: http
+      protocol: TCP
       containerPort: 80
       servicePort: 80
-  resources:
-    cpu:
-      min: 10m
-      max: 100m
-    memory:
-      min: 500M
-      max: 2G
+  cpu: 100m
+  memory: 500m
   #        disk:
   #          - path: /a/b/c
   #            name: tmpfile
