update nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,8 +14,8 @@ server {
             return 200;
         }
 
-        add_header 'Access-Control-Allow-Origin' '*';
-        proxy_pass https://kubernetes.default/$1;
+        proxy_set_header 'Authorization' 'Bearer __TOKEN__';
+        proxy_pass https://100.64.0.1:443/$1;
     }
 
     location / {
