--- a/config/crd/bases/core.kapp.dev_componenttemplates.yaml
+++ b/config/crd/bases/core.kapp.dev_componenttemplates.yaml
@@ -147,6 +147,11 @@ spec:
                 - name
                 type: object
               type: array
+            workloadType:
+              enum:
+              - server
+              - cronjob
+              type: string
           required:
           - image
           - name
