--- a/config/samples/core_v1alpha1_componenttemplate.yaml
+++ b/config/samples/core_v1alpha1_componenttemplate.yaml
@@ -6,6 +6,7 @@ spec:
   # Add fields here
   name: web
   image: nginx:alpine
+  workloadType: server
   beforeStart:
     - ls -alh /
     - echo "test" > /tmp/bbq
