add schedule in component template

--- a/config/crd/bases/core.kapp.dev_componenttemplates.yaml
+++ b/config/crd/bases/core.kapp.dev_componenttemplates.yaml
@@ -105,6 +105,8 @@ spec:
                 - name
                 type: object
               type: array
+            schedule:
+              type: string
             type:
               enum:
               - Server
