add imagePullSecrets in kustomize

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -22,6 +22,8 @@ spec:
       labels:
         control-plane: controller-manager
     spec:
+      imagePullSecrets:
+        - name: docker-registry-secret
       containers:
       - command:
         - /manager
