--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "redux-immutable": "^4.0.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "yaml": "^1.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
